2003-09-24  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/GL/glu.h (gluErrorUnicodeStringEXT): Add function.
	Function exists in glu32.def but is undocumented on MSDN.
	A Google search came up with this declaration.

2003-09-24  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/GL/glu.h: Rewritten from scratch. Started from GLU 1.3
	headers from OpenGL Sample Implementation. Windows ships with
	GLU 1.2 so some constants and functions were removed. Then some
	typedef's and function declarations were reworked to look like
	the previous GL/glu.h.

2003-09-24  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/uxtheme.h (PROPERTYORIGIN): the documentation of
	PROPERTYORIGIN suggests it's `PROPERTYORIGIN' but experimentation
	suggests it's actually `enum PROPERTYORIGIN'. Keep both.

	* include/uxtheme.h (THEME_SIZE, THEMESIZE): MSDN suggests
	it's either `THEME_SIZE' or `THEMESIZE' but experimentation
	suggests it's actually `enum THEMESIZE'. Keep `THEME_SIZE'
	and `enum THEMESIZE'.

2003-09-24  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/uxtheme.h: New file.
	* include/tmschema.h: New file.
	* include/uxtheme.def: New file.
	* lib/test.c: Include uxtheme.h, tmschema.h.

2003-09-23  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/winuser.h (KEYEVENTF_UNICODE, KEYEVENTF_SCANCODE):
	Add defines.

2003-09-23  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/winable.h [_WIN32_WINNT < 0x0403] (INPUT_MOUSE,
	INPUT_KEYBOARD, INPUT_HARDWARE): Duplicate defines in
	<winable.h> as seems to be required on older versions of
	Windows.

2003-09-23  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/winuser.h [WINVER >= 0x0500] (CHILDID_SELF,
	GUI_CARETBLINKING, GUI_INMOVESIZE, GUI_INMENUMODE,
	GUI_SYSTEMMENUMODE, GUI_POPUPMENUMODE, GUI_16BITTASK):
	Add defines, the last one only on Windows XP...

	* include/winable.h [WINVER < 0x0500] (CHILDID_SELF,